crates/tuff_python_formatter/src/comments/snapshots/tuff_python_formatter__comments__tests__while_else_indented_comment_between_branches.snap
---
source: crates/tuff_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: StmtWhile,
        range: 0..45,
        source: `while True: pass⏎`,
    }: {
        "leading": [],
        "dangling": [
            SourceComment {
                text: "# comment",
                position: OwnLine,
                formatted: false,
            },
        ],
        "trailing": [],
    },
}
