crates/tuff_python_formatter/src/comments/snapshots/tuff_python_formatter__comments__tests__while_else_very_indented_comment_between_branches.snap
---
source: crates/tuff_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: StmtPass,
        range: 16..20,
        source: `pass`,
    }: {
        "leading": [],
        "dangling": [],
        "trailing": [
            SourceComment {
                text: "# comment",
                position: OwnLine,
                formatted: false,
            },
        ],
    },
}
